--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,35 @@
-
-*{
-  color: #FFFFFF !important;
+* {
   background-color: #000000 !important;
+  color: #FFFFFF !important;
 }
 
 b {
   color: #FFFFFF !important;
 }
 
+img {
+  background: #FFFFFF !important;
+}
 
-
-.legendary-user-first-letter {
+.legendary-user-first-letter span{
+  color: #FFFFFF !important;
+  background-color: #000000 !important;
+}
+.user-rank .user-black {
+  color: #FFFFFF !important;
+  background-color: #000000 !important;
+}
+.rated-user.user-admin {
+  background-color: #000000 !important;
+  color: #FFFFFF !important;
+}
+.rated-user.user-black {
   background-color: #000000 !important;
   color: #FFFFFF !important;
 }
 
-.rated-user.user-admin {
-  background-color: #000000 !important;
-  color: #FFFFFF !important;
+.rated-user.user-gray {
+  color: #FF0000 !important;
 }
 
 .header {
