--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* Default styling */
+
 :root{
-  --genericLinkBlueColor: #21b0fd;
-  --genericLinkVisitedBlueColor: #8ab1ff;
+  --link: #21b0fd;
+  --Visitedlink: #8ab1ff;
 }
 * {
   background-color: #000000 !important;
@@ -21,35 +21,27 @@ span.verdict-unsuccessful-challenge
 span.cell-rejected 
 a:not([href]):not(.rated-user),
 a:link:not(.rated-user) {
-    color: var(--genericLinkBlueColor) !important;
+    color: var(--link) !important;
 }
 
 a:visited:not(.rated-user) {
-    color: var(--genericLinkVisitedBlueColor) !important;
+    color: var(--Visitedlink) !important;
 }
 
-/* Ensure .edu-menu-item has the same color as generic links */
 .edu-menu-item {
-  color: var(--genericLinkVisitedBlueColor) !important;
+  color: var(--Visitedlink) !important;
   text-decoration: none;
   cursor: pointer;
 }
 
-/* during contest, own submissions's row needs to be highlighted */
 .comment-table.highlight-blue,
 .comment-table.highlight,
 .standings tr.highlighted-row td,
 table tr.highlighted-row td,
 .highlight-blue,
-/* You have a new message*/
 .lang-chooser div[style^="background-color: #EAF4FF;"] {
     background-color: #000000 !important;
 }
-
-
-
-
-
 
 .rated-user.user-admin {
   background-color: #000000 !important;
@@ -86,7 +78,6 @@ a.user-black {
     color: #fff !important;
 }
 
-/* Override styling within #usersRatingGraphPlaceholder */
 #usersRatingGraphPlaceholder * {
   background-color: initial !important;
   color: #ffffff !important;
@@ -114,5 +105,8 @@ a.user-black {
 }
 
 #usersRatingGraphPlaceholder .legendary-user-first-letter:first-letter {
+  
   color: #ffffff !important;
 }
+
+
