Minor Color Fixed

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,9 @@ input[type="file"],
 .CalendarPage_calendar iframe,
 textarea[name="input"],
 textarea[name="output"],
+select,
+button,
+input,
 #sourceCodeTextarea,
 .delete-resource-link,
 .close,
