--- a/styles.css
+++ b/styles.css
@@ -232,3 +232,8 @@ span.user-green,
 a.user-green {
   color: #00ff00 !important;
 }
+
+.test-example-line{
+  background-color: #1a1a1a !important;
+  background: #1a1a1a !important;
+}
