--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,9 @@ span.cell-rejected,
 a:not([href]):not(.rated-user),
 a:link:not(.rated-user),
 a:visited:not(.rated-user),
+pre,
+body>pre,
+div.ttypography pre,
 .info,
 .ttypography,
 .ttypography table,
