--- a/styles.css
+++ b/styles.css
@@ -278,3 +278,7 @@ span.com{
 .input,.output,.answer,.checker{
   background-color: #000000 !important;
 }
+
+h3{
+  text-shadow: 0 0 10px #ffffff , 0 0 10px #ffffff !important;
+}
